[package]
name = "Aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
arboard = "3.6.1"
eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
rand = "0.9.2"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
getrandom = "0.2"
winconsole = "0.11.1"