[package]
name = "Aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
arboard = "3.6.1"
eframe = { version = "0.32.3", features = ["wgpu", "persistence"] }
rand = "0.9.2"
getrandom = "0.3.3"
winconsole = "0.11.1"
rfd = "0.15.4"
sha2 = "0.10.9"
directories = "6.0.0"
log = "0.4.28"
env_logger = "0.11.8"